add some more tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = deflatable-map
 version = 0.1.0
 author = Lucas Sargent
 author_email = lucas.sargent@eliiza.com.au
-description = A MutableMapping interface that can be flatten and re-inflated
+description = A MutableMapping interface that can be flattened and re-inflated
 keywords = dict yaml flatten nested
 long_description = file: README.md
 long_description_content_type = text/markdown
