rename extend tests, add readme & cicd

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,7 +23,7 @@
 			"--project",
 			"src",
 			"--project",
-			"inflatablemapping",
+			"deflatabledict",
 		],
 		"[python]": {
 			"editor.codeActionsOnSave": {
