--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,15 @@
 [metadata]
-name = deflatable-map
-version = 0.1.0
+name = deflatable-dict
+version = 0.2.0
 author = Lucas Sargent
 author_email = lucas.sargent@eliiza.com.au
-description = A MutableMapping interface that can be flattened and re-inflated
-keywords = dict yaml flatten nested
+description = A dictionary that can be flattened and re-inflated
+keywords = dict flatten nested yaml yaml
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/JJ11teen/deflatable-mapping
+url = https://github.com/JJ11teen/deflatable-dict
 project_urls =
-    Bug Tracker = https://github.com/JJ11teen/deflatable-mapping/issues
+    Bug Tracker = https://github.com/JJ11teen/deflatable-dict/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
