make version checkable

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = deflatable-dict
-version = 0.2.0
+version = attr: deflatabledict.__version__
 author = Lucas Sargent
 author_email = lucas.sargent@eliiza.com.au
 description = A dictionary that can be flattened and re-inflated
