--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = attr: deflatabledict.__version__
 author = Lucas Sargent
 author_email = lucas.sargent@eliiza.com.au
 description = A dictionary that can be flattened and re-inflated
-keywords = dict flatten nested yaml yaml
+keywords = dict flatten nested yaml
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/JJ11teen/deflatable-dict
